# kernelci-patchwork-webhook

./: .pycodestyle  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: patchwork.yaml
kernelci_patchwork/: __init__.py  main.py  models.py
kernelci_patchwork/tests/: test_patchwork_webhook.py
